Implement Shopify app with settings configuration and database integration

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "typescript": "latest",
     "@types/react": "latest",
     "@types/node": "latest",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/react-dom": "latest",
+    "@types/pg": "^8.10.9",
     "eslint": "latest",
     "eslint-config-next": "latest"
   },
