--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,47 @@
 node_modules
+.env.local
+
+# Next.js
+.next
+.cache/
+out/
+
+# Production build
+out/
+
+# Local env files
+.env.local
+.env.production.local
+.env.development.local
+
+# Database
+*.db
+*.db-journal
+
+# Build outputs
+build/
+dist/
+/dist/
+
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Mac
+.DS_Store
+
+# Windows
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
