--- a/package.json
+++ b/package.json
@@ -7,27 +7,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "worker:start": "cross-env ts-node --project tsconfig.node.json --transpile-only src/workers/webhook-worker.ts",
+    "monitor:start": "cross-env ts-node --project tsconfig.node.json --transpile-only src/monitoring/webhook-monitor.ts",
+    "dev:worker": "cross-env nodemon -C --exec \"ts-node --project tsconfig.node.json --transpile-only src/workers/webhook-worker.ts\"",
+    "dev:monitor": "cross-env nodemon -C --exec \"ts-node --project tsconfig.node.json --transpile-only src/monitoring/webhook-monitor.ts\""
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
     "@shopify/app-bridge": "^3.7.9",
     "@shopify/app-bridge-react": "^3.7.9",
+    "@shopify/app-bridge-utils": "^3.5.1",
     "@shopify/polaris": "^12.0.0",
     "@shopify/polaris-icons": "^6.2.0",
-    "typescript": "latest",
-    "@types/react": "latest",
-    "@types/node": "latest",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
     "axios": "^1.6.0",
-    "pg": "^8.11.3"
+    "jsonwebtoken": "^9.0.3",
+    "next": "13.5.4",
+    "pg": "^8.17.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react-dom": "latest",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@types/jest": "^29.5.0",
     "@types/pg": "^8.10.9",
-    "eslint": "latest",
-    "eslint-config-next": "latest"
+    "@types/react-dom": "^18.0.0",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "cross-env": "^10.1.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "13.5.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ngrok": "^5.0.0-beta.2",
+    "nodemon": "^3.1.11",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3"
   },
   "keywords": [
     "shopify",
